# ephemeral-sites

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: release.yml  test.yml
charts/ephemeral-sites/: Chart.yaml  values.yaml
charts/ephemeral-sites/templates/: _helpers.tpl  certificate.yaml  cronjob-cleanup.yaml  deployment.yaml  ingress-api.yaml  ingress-wildcard.yaml  pvc.yaml  service.yaml  servicemonitor.yaml
cli/: README.md  delete.sh  deploy.sh  extend.sh  list.sh
docs/: SPEC.md  api-reference.md  configuration.md  installation.md  security.md  troubleshooting.md
docs/steps/: README.md  _template.md  step-10-runtime-config.md  step-11-static-server.md  step-12-password-protection.md  step-13-cleanup.md  step-14-metrics-health.md  step-15-helm-chart.md  step-16-cli-bash.md  step-17-docs.md  step-18-e2e-k3d.md  step-2-validator.md  step-3-slug-generator.md  step-4-db-migrations.md  step-5-storage.md  step-6-auth.md  step-7-quota.md  step-8-api-put-upsert.md  step-9-api-crud.md
e2e/: README.md  acceptance.sh  run.sh
src/ephemeral_sites/: __init__.py  __main__.py  auth.py  config.py  db.py  metrics.py  quota.py  slug.py  slug_words.py  storage.py  validator.py
src/ephemeral_sites/api/: __init__.py  app.py  deps.py  errors.py  middleware.py  models.py  routes_probes.py  routes_sites.py
src/ephemeral_sites/cleanup/: __init__.py  __main__.py  runner.py
src/ephemeral_sites/server/: __init__.py  app.py  headers.py  resolver.py  spa.py
tests/: conftest.py  test_smoke.py
tests/integration/: conftest.py  test_api_lifecycle.py  test_api_upsert.py  test_cleanup.py  test_probes.py  test_runtime_config.py  test_server_password.py  test_server_serve.py
tests/unit/: test_auth.py  test_config.py  test_db.py  test_quota.py  test_server_helpers.py  test_slug.py  test_storage.py  test_validator.py
